tests/miniJava/pos/000050_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java = java [ new int [ 0 ] ] ; } }
