tests/miniJava/neg/001239_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new java public int [] java ( ) { return 0 ; } ( ) ; } }
